--- a/index.html
+++ b/index.html
@@ -278,6 +278,18 @@ function init() {
 	doc.send();
 }
 
+// fun stats
+
+var _gaq = _gaq || [];
+_gaq.push(['_setAccount', 'UA-27302158-1']);
+_gaq.push(['_trackPageview']);
+
+(function() {
+var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+})();
+
 </script>
 <body style="font-family:sans-serif;" onload="init()">
 <div id="tooltip" style="position:absolute; display:none; background-color:white; color:blue;
