--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ function info(evt) {
 	} else {
 		x = parseInt(x / cellWidth);
 		y = parseInt(y / cellHeight);
-		var	religion = mapData[year*width*height+y*width+x],
+		var	religion = mapData[year*width*height+((width-x-1)*height)+(height-y-1)],
 			prevReligion = activeReligion;
 		activeReligion = (religion!=sea)? religion: null;
 		showTooltip(activeReligion? religions[activeReligion][1]: null,evt.pageX,evt.pageY);
@@ -146,25 +146,25 @@ function draw() {
 		return;
 	}
 	var ofs = year*width*height, y, x, prevCol, prevRow, cell;
-	for(var y=0; y<height; y++)
-		for(var x=0; x<width; x++) {
-			prevCol = cell;
-			prevRow = (ofs>=width? mapData[ofs-width]: -1);
+	for(var x=width-1; x>-1; x--)
+		for(var y=height-1; y>-1; y--) {
+			prevRow = cell;
+			prevCol = (ofs>=height? mapData[ofs-height]: -1);
 			cell = mapData[ofs++];
 			ctx.fillStyle = religions[cell][2];
 			ctx.fillRect(x*cellWidth,y*cellHeight,cellWidth-0.25,cellHeight-0.25);
 			if(cell != prevCol) {
 				ctx.strokeStyle = (prevCol==activeReligion || cell==activeReligion)? "#ff2020": "#a0a0a0";
 				ctx.beginPath();
-				ctx.moveTo(x*cellWidth-1,y*cellHeight);
-				ctx.lineTo(x*cellWidth-1,y*cellHeight+cellHeight);
+				ctx.moveTo((x+1)*cellWidth-1,y*cellHeight);
+				ctx.lineTo((x+1)*cellWidth-1,y*cellHeight+cellHeight);
 				ctx.stroke();
 			}
 			if(cell != prevRow) {
 				ctx.strokeStyle = (prevRow==activeReligion || cell==activeReligion)? "#ff2020": "#a0a0a0";
 				ctx.beginPath();
-				ctx.moveTo(x*cellWidth-1,y*cellHeight);
-				ctx.lineTo(x*cellWidth+cellWidth,y*cellHeight);
+				ctx.moveTo(x*cellWidth-1,(y+1)*cellHeight);
+				ctx.lineTo(x*cellWidth+cellWidth,(y+1)*cellHeight);
 				ctx.stroke();
 			}
 		}
@@ -182,11 +182,12 @@ function draw() {
 	// clip to tidy up arc abuse in opera
 	ctx.save();
 	ctx.beginPath();
-	ctx.moveTo(0,height*cellHeight+barMargin);
-	ctx.lineTo(canvas.width,height*cellHeight+barMargin);
+	ctx.moveTo(0,height*cellHeight-1);
+	ctx.lineTo(canvas.width,height*cellHeight-1);
 	ctx.lineTo(canvas.width,canvas.height);
 	ctx.lineTo(0,canvas.height);
 	ctx.clip();
+	ctx.clearRect(0,0,canvas.width,canvas.height);
 	// year bar
 	ctx.fillStyle = "#ffffff";
 	ctx.fillRect(0,height*cellHeight/2,canvas.width,barHeight);
@@ -215,14 +216,17 @@ function draw() {
 function setData(data) {
 	var	rows = data.split("\n"),
 		row, i, j, x, y,
+		LOWER = 33,
+		UPPER = 122,
+		RANGE = UPPER-LOWER,
+		MIN = 1,
 		numReligions = parseInt(rows[0]);
 	// get the religions
 	for(i=0; i<numReligions; i++) {
 		row = rows[1+i].split("\t");
-		j = row[0].charCodeAt(0);
-		if(row[1] == "Sea")
-			sea = j;
-		religions[j] = row;
+		if(row[0] == "Sea")
+			sea = i;
+		religions.push([i,row[0],row[1]]);
 	}
 	// get the years
 	years = rows[1+numReligions].split("\t");
@@ -230,24 +234,39 @@ function setData(data) {
 	row = rows[2+numReligions].split("\t");
 	width = parseInt(row[0]);
 	height = parseInt(row[1]);
-	var	dup = row[2].charCodeAt(0),
-		run_short = row[3].charCodeAt(0),
-		run_long = row[4].charCodeAt(0),
-		ch, flag, run,
+	var	code = numReligions,
+		dup = code++,
+		run_short = code++,
+		run_long = code++,
+		ch, flag, run, buf,
 		ofs = 0, chksum = 0;
 	// decompress the data
-	row = rows[3+numReligions];
+	buf = rows[3+numReligions];
+	console.log("compressed is",buf.length);
+	for(i=4+numReligions; i<rows.length; i++) {
+		row = rows[i].trim();
+		if(!row.length) break;
+		row = row.split("\t");
+		//console.log(i-4-numReligions+1,"replace",row[0],"with",row[1],buf.length);
+		buf = buf.split(row[0]).join(row[1]);
+	}
+	console.log("uncompressed is",buf.length);
+	// un-RLE it
 	mapData = new Uint8Array(width*height*years.length);
-	for(i=0; i<row.length; i++) {
-		ch = row.charCodeAt(i);
-		flag = row.charCodeAt(i+1);
+	for(i=0; i<buf.length; i++) {
+		ch = buf.charCodeAt(i)-LOWER;
+		if(ch < 0 || ch >= code)
+			console.log("ERROR",i,ch,buf.charCodeAt(i),LOWER,code);
+		flag = buf.charCodeAt(i+1)-LOWER;
 		run = 1;
 		if(flag == run_short) {
-			run += row.charCodeAt(i+2)-64;
+			run += buf.charCodeAt(i+2)-LOWER;
+			run += MIN;
 			i += 2;
 		} else if(flag == run_long) {
-			run += (row.charCodeAt(i+2)-64)*(122-64);
-			run += row.charCodeAt(i+3)-64;
+			run += (buf.charCodeAt(i+2)-LOWER)*RANGE;
+			run += buf.charCodeAt(i+3)-LOWER;
+			run += MIN;
 			i += 3;
 		}
 		for(j=0; j<run; j++) {
@@ -258,16 +277,15 @@ function setData(data) {
 	console.log(mapData.length,ofs-1,chksum);
 	// de-dup it
 	var	prev = new Uint8Array(width*height),
-		religion;
+		religion, ofs = 0;
 	for(i=0; i<years.length; i++)
-		for(y=0; y<height; y++)
-			for(x=0; x<width; x++) {
-				religion = mapData[i*width*height+y*width+x];
-				if(religion == dup)
-					mapData[i*width*height+y*width+x] = prev[y*width+x];
-				else
-					prev[y*width+x] = religion;
-			}
+		for(j=0; j<width*height; j++,ofs++) {
+			religion = mapData[ofs];
+			if(religion == dup)
+				mapData[ofs] = prev[j];
+			else
+				prev[j] = religion;
+		}
 	// draw it
 	canvas.width = width*cellWidth;
 	canvas.height = height*cellHeight + barHeight;
